--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "coverage": "jest --coverage",
+    "test": "jest --watch"
+  },
+  "jest": {
+    "preset": "jest-preset-angular",
+    "setupFilesAfterEnv": ["<rootDir>/setup-jest.ts"]
   },
   "private": true,
   "dependencies": {
+    "@abacritt/angularx-social-login": "1.2.5",
     "@angular/animations": "^14.0.0",
     "@angular/common": "^14.0.0",
     "@angular/compiler": "^14.0.0",
@@ -18,7 +24,6 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "@abacritt/angularx-social-login": "1.2.5",
     "bootstrap": "^5.2.1",
     "bootstrap-icons": "^1.8.3",
     "rxjs": "~7.5.0",
@@ -29,13 +34,9 @@
     "@angular-devkit/build-angular": "^14.0.5",
     "@angular/cli": "~14.0.5",
     "@angular/compiler-cli": "^14.0.0",
-    "@types/jasmine": "~4.0.0",
-    "jasmine-core": "~4.1.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.2.0",
-    "karma-jasmine": "~5.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "@types/jest": "^29.1.1",
+    "jest": "^28.1.3",
+    "jest-preset-angular": "^12.2.2",
     "typescript": "~4.7.2"
   }
 }
