--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -32,8 +32,8 @@ server {
 }
 
 server {
-    listen 443 default_server ssl http2;
-    listen [::]:443 ssl http2;
+    listen 443;
+    listen [::]:443;
 
     server_name online-server.cloud;
 
