--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,10 @@ server {
 
     root /usr/share/nginx/html;
 
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
     location / {
          sendfile on;
          default_type application/octet-stream;
