--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -34,3 +34,29 @@ server {
     }
 
 }
+
+server {
+    listen 443 default_server ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_name online-server.cloud;
+
+    ssl_certificate /etc/nginx/ssl/live/wewanna.shop/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/wewanna.shop/privkey.pem;
+
+    location / {
+         sendfile on;
+         default_type application/octet-stream;
+
+        gzip on;
+        gzip_http_version 1.1;
+        gzip_disable      "MSIE [1-6]\.";
+        gzip_min_length   256;
+        gzip_vary         on;
+        gzip_proxied      expired no-cache no-store private auth;
+        gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+        gzip_comp_level   9;
+
+        try_files $uri $uri/ /index.html =404;
+    }
+}
