--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -57,6 +57,6 @@ server {
         gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
         gzip_comp_level   9;
 
-        try_files $uri $uri/ /index.html =404;
+        try_files $uri $uri/ /index.html;
     }
 }
