--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -11,22 +11,7 @@ server {
     }
 
     location / {
-         sendfile on;
-         default_type application/octet-stream;
-
-        gzip on;
-        gzip_http_version 1.1;
-        gzip_disable      "MSIE [1-6]\.";
-        gzip_min_length   256;
-        gzip_vary         on;
-        gzip_proxied      expired no-cache no-store private auth;
-        gzip_types        text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-        gzip_comp_level   9;
-
-        try_files $uri $uri/ /index.html =404;
-
-        # This will allow you to refresh page in your angular app. Which will not give error 404.
-
+        return 301 https://example.org$request_uri;
     }
 
     location /api {
