--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,7 +2,7 @@ server {
 
     listen 80;
 
-    server_name wewanna.shop;
+    server_name wewanna.shop www.wewanna.shop;
 
     root /usr/share/nginx/html;
 
@@ -39,7 +39,7 @@ server {
     listen 443 default_server ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name wewanna.shop;
+    server_name wewanna.shop www.wewanna.shop;
 
     ssl_certificate /etc/nginx/ssl/live/wewanna.shop/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/wewanna.shop/privkey.pem;
