--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -45,6 +45,6 @@ server {
     ssl_certificate_key /etc/nginx/ssl/live/wewanna.shop/privkey.pem;
 
     location / {
-      proxy_pass http://example.org;
+        try_files $uri $uri/ /index.html =404;
     }
 }
