--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -49,4 +49,8 @@ server {
     location / {
         try_files $uri $uri/ /index.html =404;
     }
+
+    location /api {
+        proxy_pass http://warehouse:3002;
+    }
 }
