--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@types/uuid": "^8.3.4",
+    "ngx-cookie-service": "^15.0.0",
     "bootstrap": "^5.2.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
