- added first version of sitemap

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -27,6 +27,10 @@ server {
     ssl_certificate /etc/nginx/ssl/live/wewanna.shop/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/wewanna.shop/privkey.pem;
 
+    location /sitemap.xml {
+        try_files $uri $uri/ /sitemap.xml =404;
+    }
+
     location / {
         try_files $uri $uri/ /index.html =404;
     }
