--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node dist/prometheus-page/server/main.js",
+    "start:dev": "ng run prometheus-page:serve-ssr",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "coverage": "jest --coverage",
