--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -29,7 +29,7 @@ server {
 
     location / {
         try_files $uri $uri/ /index.html =404;
-        proxy_pass http://localhost:4000;
+        proxy_pass http://wewanna:4000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
