- nginx forward to nguniversal app

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -22,7 +22,7 @@ server {
 
     server_name wewanna.shop www.wewanna.shop;
 
-    root /usr/share/nginx/html;
+    #root /usr/share/nginx/html;
 
     ssl_certificate /etc/nginx/ssl/live/wewanna.shop/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/wewanna.shop/privkey.pem;
