- nginx forward to nguniversal app

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -28,7 +28,7 @@ server {
     ssl_certificate_key /etc/nginx/ssl/live/wewanna.shop/privkey.pem;
 
     location / {
-        try_files $uri $uri/ /index.html =404 @proxy;
+        try_files $uri $uri/ /index.html @proxy;
     }
 
     location @proxy {
