--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -28,12 +28,10 @@ server {
     ssl_certificate_key /etc/nginx/ssl/live/wewanna.shop/privkey.pem;
 
     location / {
-        try_files $uri $uri/ /index.html @proxy;
+        try_files $uri $uri/ /index.html =404;
+        proxy_pass http://wewanna:4000;
     }
 
-    location @proxy {
-      proxy_pass http://wewanna:4000;
-    }
 
     location /api {
         proxy_pass http://warehouse:3002;
