--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -28,7 +28,7 @@ server {
     ssl_certificate_key /etc/nginx/ssl/live/wewanna.shop/privkey.pem;
 
     location / {
-        try_files $uri $uri/ /index.html =404;
+        try_files $uri;
         proxy_pass http://wewanna:4000;
     }
 
