- nginx forward to nguniversal app

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -32,7 +32,7 @@ server {
     }
 
     location @proxy {
-        proxy_pass http://wewanna:4000;
+        proxy_pass http://localhost:4000;
     }
 
     location /api {
