--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -32,7 +32,7 @@ server {
     }
 
     location @proxy {
-        proxy_pass http://127.0.0.1:4000;
+        proxy_pass http://127.0.0.1:4000/;
     }
 
     location /api {
