- made robots.txt readable - optimised robots meta tag

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -27,6 +27,8 @@ server {
     ssl_certificate /etc/nginx/ssl/live/wewanna.shop/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/wewanna.shop/privkey.pem;
 
+    location /robots.txt { root /usr/share/nginx/html;  }
+
     location / {
         try_files $uri @proxy;
     }
