- made sitemap.xml readable

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -28,6 +28,7 @@ server {
     ssl_certificate_key /etc/nginx/ssl/live/wewanna.shop/privkey.pem;
 
     location /robots.txt { root /usr/share/nginx/html/;  }
+    location /sitemap.xml { root /usr/share/nginx/html/;  }
 
     location / {
         try_files $uri @proxy;
