--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
       - "/var/www/prometheus/prometheus-page-ng/nginx/default.conf:/etc/nginx/conf.d/default.conf"
       - "./certbot/www:/var/www/certbot/:ro"
       - "./certbot/conf/:/etc/nginx/ssl/:ro"
+    environment:
+      - TZ=Europe/Berlin
 
   wewanna:
     image: node
@@ -22,6 +24,8 @@ services:
     working_dir: /app
     volumes:
       - "/var/www/prometheus/prometheus-page-ng:/app"
+    environment:
+      - TZ=Europe/Berlin
 
   certbot:
     image: certbot/certbot:latest
@@ -39,6 +43,8 @@ services:
     working_dir: /app
     volumes:
       - "/var/www/prometheus/information-warehouse:/app"
+    environment:
+      - TZ=Europe/Berlin
 
   warehouse-database:
     image: mongo
@@ -48,6 +54,8 @@ services:
       - "27017:27017"
     volumes:
       - "warehouse-database:/data/db"
+    environment:
+      - TZ=Europe/Berlin
 
   satellite-controller:
     image: node
@@ -59,6 +67,8 @@ services:
     working_dir: /app
     volumes:
       - "/var/www/prometheus/satellite-controller:/app"
+    environment:
+      - TZ=Europe/Berlin
 
   satellite:
     image: node
@@ -70,6 +80,8 @@ services:
     working_dir: /app
     volumes:
       - "/var/www/prometheus/information-satellite:/app"
+    environment:
+      - TZ=Europe/Berlin
 
 volumes:
   warehouse-database:
