--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,7 @@
 server {
-
     listen 80;
+
+    deny 95.214.55.244;
 
     server_name wewanna.shop www.wewanna.shop;
 
@@ -13,16 +14,15 @@ server {
     location / {
         return 301 https://www.wewanna.shop$request_uri;
     }
-
 }
 
 server {
     listen 443 default_server ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name wewanna.shop www.wewanna.shop;
+    deny 95.214.55.244;
 
-    #root /usr/share/nginx/html;
+    server_name wewanna.shop www.wewanna.shop;
 
     ssl_certificate /etc/nginx/ssl/live/wewanna.shop/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/wewanna.shop/privkey.pem;
