--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,6 +1,7 @@
 server {
     listen 80;
 
+    deny 43.128.225.120;
     deny 95.214.55.244;
 
     server_name wewanna.shop www.wewanna.shop;
@@ -20,6 +21,7 @@ server {
     listen 443 default_server ssl http2;
     listen [::]:443 ssl http2;
 
+    deny 43.128.225.120;
     deny 95.214.55.244;
 
     server_name wewanna.shop www.wewanna.shop;
