--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,10 @@ server {
 
     listen 80;
 
+    deny 43.128.225.120;
+    deny 95.214.55.244;
+    deny 109.237.98.226;
+
     server_name wewanna.shop www.wewanna.shop;
 
     root /usr/share/nginx/html;
@@ -20,9 +24,11 @@ server {
     listen 443 default_server ssl http2;
     listen [::]:443 ssl http2;
 
-    server_name wewanna.shop www.wewanna.shop;
+    deny 43.128.225.120;
+    deny 95.214.55.244;
+    deny 109.237.98.226;
 
-    #root /usr/share/nginx/html;
+    server_name wewanna.shop www.wewanna.shop;
 
     ssl_certificate /etc/nginx/ssl/live/wewanna.shop/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/wewanna.shop/privkey.pem;
