--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -3,6 +3,7 @@ server {
 
     deny 43.128.225.120;
     deny 95.214.55.244;
+    deny 109.237.97.180;
     deny 109.237.98.226;
 
     server_name wewanna.shop www.wewanna.shop;
@@ -24,6 +25,7 @@ server {
 
     deny 43.128.225.120;
     deny 95.214.55.244;
+    deny 109.237.97.180;
     deny 109.237.98.226;
 
     server_name wewanna.shop www.wewanna.shop;
