--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,6 +5,7 @@ server {
     deny 95.214.55.244;
     deny 109.237.97.180;
     deny 109.237.98.226;
+    deny 152.89.196.222;
 
     server_name wewanna.shop www.wewanna.shop;
 
@@ -27,6 +28,7 @@ server {
     deny 95.214.55.244;
     deny 109.237.97.180;
     deny 109.237.98.226;
+    deny 152.89.196.222;
 
     server_name wewanna.shop www.wewanna.shop;
 
