--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,6 +6,7 @@ server {
     deny 109.237.97.180;
     deny 109.237.98.226;
     deny 152.89.196.222;
+    deny 185.225.74.102;
 
     server_name wewanna.shop www.wewanna.shop;
 
@@ -29,6 +30,7 @@ server {
     deny 109.237.97.180;
     deny 109.237.98.226;
     deny 152.89.196.222;
+    deny 185.225.74.102;
 
     server_name wewanna.shop www.wewanna.shop;
 
