--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/platform-server": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "@angular-slider/ngx-slider": "^2.0.3",
     "@nguniversal/express-engine": "^14.0.0",
     "@types/uuid": "^8.3.4",
     "bootstrap": "^5.2.1",
