--- a/angular.json
+++ b/angular.json
@@ -29,9 +29,10 @@
             ],
             "styles": [
               "src/styles.scss",
+              "src/assets/font-awesome/css/font-awesome.css",
+              "src/assets/slick-slide/slick.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.css"
-            ],
-            "scripts": []
+            ]
           },
           "configurations": {
             "production": {
