--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,7 @@ server {
     listen 80;
 
     deny 43.128.225.120;
+    deny 47.128.48.107;
     deny 95.214.55.244;
     deny 109.237.97.180;
     deny 109.237.98.226;
@@ -26,6 +27,7 @@ server {
     listen [::]:443 ssl http2;
 
     deny 43.128.225.120;
+    deny 47.128.48.107;
     deny 95.214.55.244;
     deny 109.237.97.180;
     deny 109.237.98.226;
