--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,6 +13,10 @@ server {
 
     root /usr/share/nginx/html;
 
+    if ($http_user_agent ~* (semrush|bytespider)) {
+        return 403;
+    }
+
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
@@ -38,6 +42,10 @@ server {
 
     ssl_certificate /etc/nginx/ssl/live/wewanna.shop/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/wewanna.shop/privkey.pem;
+
+    if ($http_user_agent ~* (semrush|bytespider)) {
+        return 403;
+    }
 
     location /robots.txt { root /usr/share/nginx/html/;  }
     location /sitemap.xml { root /usr/share/nginx/html/;  }
