--- a/angular.json
+++ b/angular.json
@@ -28,10 +28,10 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss",
               "src/assets/font-awesome/css/font-awesome.css",
               "src/assets/slick-slide/slick.min.css",
-              "node_modules/bootstrap/dist/css/bootstrap.css"
+              "node_modules/bootstrap/dist/css/bootstrap.css",
+              "src/styles.scss"
             ]
           },
           "configurations": {
