--- a/package.json
+++ b/package.json
@@ -23,37 +23,36 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^14.0.0",
-    "@angular/common": "^14.0.0",
-    "@angular/compiler": "^14.0.0",
-    "@angular/core": "^14.0.0",
-    "@angular/forms": "^14.0.0",
-    "@angular/platform-browser": "^14.0.0",
-    "@angular/platform-browser-dynamic": "^14.0.0",
-    "@angular/platform-server": "^14.0.0",
-    "@angular/router": "^14.0.0",
+    "@angular/animations": "^17.2.0",
+    "@angular/common": "^17.2.0",
+    "@angular/compiler": "^17.2.0",
+    "@angular/core": "^17.2.0",
+    "@angular/forms": "^17.2.0",
+    "@angular/platform-browser": "^17.2.0",
+    "@angular/platform-browser-dynamic": "^17.2.0",
+    "@angular/platform-server": "^17.2.0",
+    "@angular/router": "^17.2.0",
     "@angular-slider/ngx-slider": "^2.0.3",
-    "@nguniversal/express-engine": "^14.0.0",
+    "@angular/ssr": "^17.2.0",
     "@types/uuid": "^8.3.4",
     "bootstrap": "^5.2.1",
     "chart.js": "^4.0.0",
     "express": "^4.15.2",
-    "ngx-cookie-service": "^14.0.0",
+    "ngx-cookie-service": "^17.1.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "uuid": "^9.0.0",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.14.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.0.5",
-    "@angular/cli": "~14.0.5",
-    "@angular/compiler-cli": "^14.0.0",
-    "@nguniversal/builders": "^14.0.0",
+    "@angular-devkit/build-angular": "^17.2.0",
+    "@angular/cli": "~17.2.0",
+    "@angular/compiler-cli": "^17.2.0",
     "@types/express": "^4.17.0",
     "@types/jest": "^29.1.1",
     "@types/node": "^14.15.0",
-    "jest": "^28.1.3",
-    "jest-preset-angular": "^12.2.2",
-    "typescript": "~4.7.2"
+    "jest": "^29.7.0",
+    "jest-preset-angular": "^14.0.3",
+    "typescript": "~5.3.3"
   }
 }
